My first change

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-      <h1>Welcome to Group 2 application</h1>
+      <h1>Welcome to Day 2 application</h1>
     {{{body}}}
 </div>
 <div>
